--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <mockito.version>3.7.7</mockito.version>
         <mapstruct.version>1.4.2.Final</mapstruct.version>
         <jacoco-maven-plugin.version>0.8.5</jacoco-maven-plugin.version>
+        <org.mapstruct.version>1.5.3.Final</org.mapstruct.version>
     </properties>
 
     <dependencies>
@@ -85,6 +86,11 @@
             <groupId>joda-time</groupId>
             <artifactId>joda-time</artifactId>
             <version>2.12.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct</artifactId>
+            <version>${org.mapstruct.version}</version>
         </dependency>
     </dependencies>
 
