--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,7 @@
             <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct</artifactId>
             <version>${org.mapstruct.version}</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
