--- a/pom.xml
+++ b/pom.xml
@@ -104,11 +104,17 @@
             <version>2.12.1</version>
         </dependency>
         <dependency>
-            <!-- https://mvnrepository.com/artifact/joda-time/joda-time-hibernate -->
             <groupId>joda-time</groupId>
             <artifactId>joda-time-hibernate</artifactId>
-            <version>1.4</version>
+            <version>1.3</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.jadira.usertype/usertype.core -->
+        <dependency>
+            <groupId>org.jadira.usertype</groupId>
+            <artifactId>usertype.core</artifactId>
+            <version>6.0.1.GA</version>
+        </dependency>
+
 
         <!-- GOOGLE DEPENDENCIES -->
         <dependency>
@@ -125,7 +131,11 @@
             <version>2.3.0</version>
         </dependency>
 
-
+        <!-- POSTGRESQL DEPENDENCIES -->
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
