--- a/pom.xml
+++ b/pom.xml
@@ -7,12 +7,10 @@
     <groupId>br.com.trajy</groupId>
     <artifactId>Architecture</artifactId>
     <version>1.0-SNAPSHOT</version>
-
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.2.1.RELEASE</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <version>2.6.14</version>
     </parent>
 
     <properties>
@@ -71,6 +69,14 @@
             <version>${mapstruct.version}</version>
         </dependency>
 
+        <!-- BEAN VALIDATION DEPENDENCIES -->
+        <dependency>
+            <!-- https://mvnrepository.com/artifact/javax.validation/validation-api -->
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+            <version>2.0.1.Final</version>
+        </dependency>
+
         <!-- APACHE COMMONS DEPENDENCIES -->
         <dependency>
             <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
@@ -115,20 +121,11 @@
             <version>6.0.1.GA</version>
         </dependency>
 
-
         <!-- GOOGLE DEPENDENCIES -->
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
             <version>31.0.1-jre</version>
-        </dependency>
-
-        <!-- JAXB DEPENDENCIES -->
-        <dependency>
-            <!-- https://mvnrepository.com/artifact/javax.xml.bind/jaxb-api -->
-            <groupId>javax.xml.bind</groupId>
-            <artifactId>jaxb-api</artifactId>
-            <version>2.3.0</version>
         </dependency>
 
         <!-- POSTGRESQL DEPENDENCIES -->
