--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,12 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- RESILIENCE4J DEPENDENCIES -->
+        <dependency>
+            <groupId>io.github.resilience4j</groupId>
+            <artifactId>resilience4j-spring-boot2</artifactId>
+        </dependency>
+
         <!-- LOMBOK DEPENDENCIES -->
         <dependency>
             <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
