--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <mockito.version>3.7.7</mockito.version>
         <mapstruct.version>1.5.3.Final</mapstruct.version>
         <jacoco-maven-plugin.version>0.8.5</jacoco-maven-plugin.version>
+        <openapi.version>1.6.15</openapi.version>
     </properties>
 
     <dependencies>
@@ -75,9 +76,14 @@
             <!-- https://mvnrepository.com/artifact/org.springdoc/springdoc-openapi-webmvc-core -->
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-webmvc-core</artifactId>
-            <version>1.6.15</version>
+            <version>${openapi.version}</version>
         </dependency>
-
+        <dependency>
+            <!-- https://mvnrepository.com/artifact/org.springdoc/springdoc-openapi-webmvc-core -->
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-ui</artifactId>
+            <version>${openapi.version}</version>
+        </dependency>
 
         <!-- RESILIENCE4J DEPENDENCIES -->
         <dependency>
