--- a/pom.xml
+++ b/pom.xml
@@ -167,6 +167,27 @@
             <version>2.0.2</version>
             <scope>compile</scope>
         </dependency>
+
+        <!-- ZIPKIN DEPENDENCIES -->
+        <dependency>
+            <!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-sleuth -->
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-sleuth</artifactId>
+            <version>3.1.5</version>
+        </dependency>
+        <dependency>
+            <!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-sleuth-zipkin -->
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-sleuth-zipkin</artifactId>
+            <version>3.1.5</version>
+        </dependency>
+
+        <!-- RABBIT-MQ DEPENDENCIES -->
+        <dependency>
+            <!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-sleuth-zipkin -->
+            <groupId>org.springframework.amqp</groupId>
+            <artifactId>spring-rabbit</artifactId>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
