--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.6.14</version>
+        <version>2.7.12</version>
     </parent>
 
     <properties>
@@ -20,7 +20,6 @@
         <spring.cloud-version>2021.0.5</spring.cloud-version>
         <maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
         <jacoco.skip>true</jacoco.skip>
-        <mockito.version>3.7.7</mockito.version>
         <mapstruct.version>1.5.3.Final</mapstruct.version>
         <jacoco-maven-plugin.version>0.8.5</jacoco-maven-plugin.version>
         <openapi.version>1.6.15</openapi.version>
@@ -187,6 +186,17 @@
             <!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-sleuth-zipkin -->
             <groupId>org.springframework.amqp</groupId>
             <artifactId>spring-rabbit</artifactId>
+        </dependency>
+
+        <!-- GraphQL -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-graphql</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.graphql-java-kickstart</groupId>
+            <artifactId>playground-spring-boot-starter</artifactId>
+            <version>5.10.0</version>
         </dependency>
     </dependencies>
     <dependencyManagement>
