--- a/pom.xml
+++ b/pom.xml
@@ -147,6 +147,12 @@
             <artifactId>usertype.core</artifactId>
             <version>6.0.1.GA</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.datatype/jackson-datatype-joda -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-joda</artifactId>
+            <version>2.18.1</version>
+        </dependency>
 
         <!-- GOOGLE DEPENDENCIES -->
         <dependency>
